# tarea1-estructura-de-datos-twitter-dataset

./: .gitignore  README.md  pyproject.toml
preprocessing/: copy_tables.py  friends.py  generate_friends.py  generate_likes.py  generate_test.py  io_utils.py  likes.py  main.py
src/: cli.py  main.py  stopwords.py
src/data_structs/: graph.py  hash_table.py  linked_list.py  structs.py
src/inverted_index/: posts.py  users.py
